refactor: append different ports depending on the config property
RHCLOUD-35924